// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankAccountNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Numer konta bankowego
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="bankAccountNumberField"
          label="Numer konta bankowego"
          name="name"
          placeholder="Numer konta bankowego"
          value="test"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany numer konta jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="bankAccountNumberField"
  label="Numer konta bankowego"
  name="name"
  placeholder="Numer konta bankowego"
  value=""
/>
`;

exports[`<BankAccountNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
